package clm.demo.models.enums;

public enum DocumentFormat {
    PDF,
    DOCX
}
