---
title: DownloadService — Strategy Pattern
---
classDiagram
    class DocumentDownloadService {
        -DocumentProviderRegistry providerRegistry
        -FileUtils fileUtils
        +downloadDocument(documentId, targetFormat, documentType) byte[]
    }

    class DocumentProviderRegistry {
        -Map~DocumentType, DocumentProvider~ providers
        +DocumentProviderRegistry(List~DocumentProvider~ providers)
        +getProvider(DocumentType) DocumentProvider
    }

    class DocumentProvider {
        <<interface>>
        +getDocument(Long documentId) DocumentResult
        +supportsFormat(DocumentFormat targetFormat) boolean
        +getDocumentType() DocumentType
    }

    class DocumentResult {
        <<record>>
        +byte[] compressedContent
        +DocumentFormat nativeFormat
    }

    class TemplateProvider {
        -DocumentTemplateRepository templateRepository
        +getDocument(Long) DocumentResult
        +supportsFormat(DocumentFormat) boolean
        +getDocumentType() DocumentType
    }

    class UnsignedContractProvider {
        -ContractRepository contractRepository
        +getDocument(Long) DocumentResult
        +supportsFormat(DocumentFormat) boolean
        +getDocumentType() DocumentType
    }

    class SignedContractProvider {
        -ContractRepository contractRepository
        +getDocument(Long) DocumentResult
        +supportsFormat(DocumentFormat) boolean
        +getDocumentType() DocumentType
    }

    class UnsignedAppendixProvider {
        -AppendixRepository appendixRepository
        +getDocument(Long) DocumentResult
        +supportsFormat(DocumentFormat) boolean
        +getDocumentType() DocumentType
    }

    class SignedAppendixProvider {
        -AppendixRepository appendixRepository
        +getDocument(Long) DocumentResult
        +supportsFormat(DocumentFormat) boolean
        +getDocumentType() DocumentType
    }

    class DocumentType {
        <<enumeration>>
        TEMPLATE
        UNSIGNED_CONTRACT
        SIGNED_CONTRACT
        UNSIGNED_APPENDIX
        SIGNED_APPENDIX
    }

    class DocumentFormat {
        <<enumeration>>
        PDF
        DOCX
    }

    DocumentDownloadService --> DocumentProviderRegistry : delegates to
    DocumentDownloadService --> FileUtils : decompress + convert
    DocumentProviderRegistry o-- DocumentProvider : indexes by type
    TemplateProvider ..|> DocumentProvider
    UnsignedContractProvider ..|> DocumentProvider
    SignedContractProvider ..|> DocumentProvider
    UnsignedAppendixProvider ..|> DocumentProvider
    SignedAppendixProvider ..|> DocumentProvider
    DocumentProvider --> DocumentResult : returns
    DocumentProvider --> DocumentType : identifies self via
    DocumentProvider --> DocumentFormat : validates target format via
